# obs-virtual-cam

./: .gitignore  CMakeLists.txt  readme.MD
.github/workflows/: main.yml  tag_release.yml
installer/: installer.iss  installer.nsi
src/virtual-output/: CMakeLists.txt  virtual_main.cpp  virtual_output.cpp  virtual_output.h  virtual_properties.h
src/virtual-source/: CMakeLists.txt  dllmain.cpp  virtual-cam.cpp
